--- a/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.scss
+++ b/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.scss
@@ -6,23 +6,22 @@
     border-radius: 4px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
     overflow-y: auto;
-    max-height: 200px;
 }
 
 .flx-selectable-list-item {
-    padding: 12px 16px;
+    padding: 2px 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+}
+
+.flx-selectable-list-item.active {
+    background-color: #e5f0ff;
+    color: #000;
 }
 
 .flx-selectable-list-item:hover {
     color: #fff;
     background-color: #3380c4;
-}
-
-.flx-selectable-list-item.active {
-    background-color: #f1f5fa;
-    color: #fff;
 }
 
 .flx-selectable-list-item span {
