feat: NGX-9 added flx-text-input-autocomplete-menu demo example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+
+<div class="demo-container">
+    <app-overview-a></app-overview-a>
+    <app-overview-b></app-overview-b>
+</div>
