--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,105 +1,6 @@
-:host {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-
-  .app-layout {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-
-    .app-layout-head {
-      flex: 0 0 auto;
-      position: relative;
-      display: flex;
-      flex-direction: row;
-      overflow: hidden;
-    }
-
-    .app-layout-body {
-      flex: 1 1 auto;
-      position: relative;
-      display: flex;
-      flex-direction: row;
-      overflow: hidden;
-
-      .app-layout-body-sidebar {
-        flex: 0 0 auto;
-        position: relative;
-        z-index: 11;
-        display: flex;
-        flex-direction: column;
-        overflow: visible;
-      }
-
-      .app-layout-body-content {
-        flex: 1 1 auto;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        // min-height: min-content;
-        overflow-y: auto;
-        overflow-x: hidden;
-
-        //background-color: #eeeff3;
-
-        .app-content-wrapper {
-          // margin: 0.4rem;
-          margin-top: 20px;
-          margin-left: 40px;
-          margin-right: 40px;
-          margin-bottom: 120px;
-        }
-      }
-    }
-  }
-
-  .header-content-left {
-    .app-title {
-      margin-left: 10px;
-      color: #fff;
-      font-size: 25px;
-      letter-spacing: 10px;
-    }
-  }
-
-  .header-content-right {
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    span.heading {
-      margin-left: 20px;
-      color: #fff;
-      font-size: 25px;
-      letter-spacing: 2px;
-    }
-
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 80px;
-      height: 30px;
-      margin-right: 10px;
-      background-color: #eff3f6;
-      border: 1px solid #d1d2d3;
-      border-radius: 0.25em;
-      color: #24292e;
-      outline: 0;
-
-      span.btn-text {
-        margin-left: 5px;
-        margin-top: -2px;
-        color: #24292e;
-      }
-    }
-  }
-
+.demo-container{
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem;
 }
