feat: NGX-12 remove whole tag on backspace

--- a/projects/ngx-mentions/src/lib/ngx-mentions.component.html
+++ b/projects/ngx-mentions/src/lib/ngx-mentions.component.html
@@ -3,6 +3,7 @@
     [triggerCharacter]="triggerCharacter"
     [searchRegexp]="searchRegexp"
     [closeMenuOnBlur]="closeMenuOnBlur"
+    [removeWholeTagOnBackspace]="removeWholeTagOnBackspace"
     [getChoiceLabel]="getChoiceLabel"
     [selectedChoices]="selectedChoices"
     (search)="search.emit($event)"
