--- a/src/app/overview-b/overview-b.component.html
+++ b/src/app/overview-b/overview-b.component.html
@@ -5,7 +5,7 @@
     placeholder="Enter '@' and start typing..."
     [(ngModel)]="text"></textarea>
 
-  <flx-mentions [textInputElement]="textareaRef"
+  <ngx-mentions [textInputElement]="textareaRef"
     [menuTemplate]="menuTemplate"
     [triggerCharacter]="'@'"
     [getChoiceLabel]="getChoiceLabel"
@@ -13,14 +13,14 @@
     (search)="loadChoices($event)"
     (selectedChoicesChange)="onSelectedChoicesChange($event)"
     (menuShow)="onMenuShow()"
-    (menuHide)="onMenuHide()"></flx-mentions>
+    (menuHide)="onMenuHide()"></ngx-mentions>
 
   <ng-template #menuTemplate
     let-selectChoice="selectChoice">
-    <ul class="flx-selectable-list"
+    <ul class="ngx-selectable-list"
       [class.loader-only]="!choices.length && loading">
       <li *ngFor="let user of choices"
-        class="flx-selectable-list-item"
+        class="ngx-selectable-list-item"
         (click)="selectChoice(user)">
         <span title="{{user.name}}">{{user.name}}</span>
       </li>
