style: NGX-15 refactor styles

--- a/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.scss
+++ b/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.scss
@@ -1,30 +1,51 @@
 .ngx-selectable-list {
     position: absolute;
+    padding: 0;
+    margin: 8px 0;
     background-color: #f9f9f9;
     z-index: 1;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-    overflow-y: auto;
-}
 
-.ngx-selectable-list-item {
-    padding: 2px 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+    .ngx-selectable-list-item {
+        padding: 2px 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        min-width: 10rem;
+        background-color: #ffffff;
+        display: flex;
+        align-items: center;
+        height: 2rem;
 
-.ngx-selectable-list-item.active {
-    background-color: #e5f0ff;
-    color: #000;
-}
+        &.active {
+            background-color: #e5f0ff;
+            color: #000;
+        }
 
-.ngx-selectable-list-item:hover {
-    color: #fff;
-    background-color: #3380c4;
-}
+        &:hover {
+            color: #fff;
+            background-color: #3380c4;
+        }
 
-.ngx-selectable-list-item span {
-    display: inline-block;
-    vertical-align: middle;
+        >span {
+            //flex-grow: 0;
+            //font-family: omnes_att_ii_medium;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+        &:hover {
+            color: #fff;
+            background-color: #3380c4;
+        }
+
+        &.active {
+            background-color: #e5f0ff;
+            color: #000;
+        }
+    }
 }
