--- a/src/app/overview-b/overview-b.component.scss
+++ b/src/app/overview-b/overview-b.component.scss
@@ -1,28 +1,18 @@
 .relative-block-container {
-  position: relative; 
-  
+  position: relative;
+
   textarea {
     outline: none;
     resize: none;
-    // border: 2px solid #ededff;
-    // border-radius: 10px;
-
-    // &:focus {
-    //   border: 2px solid #e5e5ff;
-    // }
   }
 
   ul {
     width: 13rem;
     background-color: white;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 2px 0 #00000024, 0 3px 1px -2px #00000033, 0 1px 5px 0 #0000001f;
 
     &.loader-only {
       height: 2rem;
-    }
-
-    span {
-      font-weight: bold;
     }
   }
 
