docs: NGX-17 include excalidraw outline pic in readme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <router-outlet></router-outlet>
 
 <div class="demo-container">
-    <app-overview-a></app-overview-a>
-    <app-overview-b></app-overview-b>
+    <div style="max-width:330px">
+        <app-overview-a></app-overview-a>
+        Keyboard supported text input autocomplete-menu
+    </div>
+    <div>
+        <app-overview-b></app-overview-b>
+        Custom text input autocomplete menu
+    </div>
 </div>
