fix: NGX-18 overflow autocomplete menu fix

--- a/projects/ngx-mentions/src/lib/text-input-highlight/text-input-highlight.component.scss
+++ b/projects/ngx-mentions/src/lib/text-input-highlight/text-input-highlight.component.scss
@@ -5,7 +5,7 @@
 // }
 
 .ngx-text-highlight-element {
-  overflow: hidden;
+  overflow: hidden!important;
   word-break: break-word;
   white-space: pre-wrap;
   position: absolute;
