fix: NGX-20 style improvements

--- a/src/app/overview-a/overview-a.component.html
+++ b/src/app/overview-a/overview-a.component.html
@@ -1,5 +1,5 @@
 <div class="relative-block-container">
-  <textarea cols="42"
+  <textarea cols="36"
     rows="6"
     #textareaRef
     placeholder="Enter '@' and start typing..."
@@ -23,4 +23,6 @@
       (selectChoice)="selectChoice($event)">
     </ngx-text-input-autocomplete-menu>
   </ng-template>
+
+  <h4>Keyboard supported text input autocomplete menu</h4>
 </div>
