--- a/src/app/overview-b/overview-b.component.html
+++ b/src/app/overview-b/overview-b.component.html
@@ -1,5 +1,5 @@
 <div class="relative-block-container">
-  <textarea cols="42"
+  <textarea cols="36"
     rows="6"
     #textareaRef
     placeholder="Enter '@' and start typing..."
@@ -27,4 +27,6 @@
       </li>
     </ul>
   </ng-template>
+
+  <h4> Custom text input autocomplete menu</h4>
 </div>
