--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <router-outlet></router-outlet>
 
 <div class="demo-container">
-    <div style="max-width:330px">
+    <div>
         <app-overview-a></app-overview-a>
-        Keyboard supported text input autocomplete-menu
     </div>
     <div>
         <app-overview-b></app-overview-b>
-        Custom text input autocomplete menu
     </div>
 </div>
