fix: NGX-26 wrong tag highlighting at the end of textarea row issue fixed

--- a/src/app/overview-a/overview-a.component.html
+++ b/src/app/overview-a/overview-a.component.html
@@ -1,6 +1,7 @@
 <div class="relative-block-container">
   <textarea cols="36"
     rows="6"
+    wrap="hard"
     #textareaRef
     placeholder="Enter '@' and start typing..."
     [(ngModel)]="text"></textarea>
