--- a/src/app/overview-b/overview-b.component.html
+++ b/src/app/overview-b/overview-b.component.html
@@ -1,6 +1,7 @@
 <div class="relative-block-container">
   <textarea cols="36"
     rows="6"
+    wrap="hard"
     #textareaRef
     placeholder="Enter '@' and start typing..."
     [(ngModel)]="text"></textarea>
