--- a/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete.component.html
+++ b/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="menuCtrl"
-     class="menu-template-container"
-     [style.top]="menuCtrl.position.top + 'px'"
-     [style.left]="menuCtrl.position.left + 'px'">
-  <ng-container *ngTemplateOutlet="menuTemplate; context: menuCtrl.context"></ng-container>
+      #dropdownMenu
+      class="menu-template-container"
+      [style.top]="menuCtrl.position.top + 'px'"
+      [style.left]="menuCtrl.position.left + 'px'">
+      <ng-container *ngTemplateOutlet="menuTemplate; context: menuCtrl.context"></ng-container>
