--- a/src/app/overview-b/overview-b.component.scss
+++ b/src/app/overview-b/overview-b.component.scss
@@ -15,6 +15,15 @@
     &.loader-only {
       height: 2rem;
     }
+
+    li:hover {
+      background-color: #ffcfff;
+    }
+
+    .active {
+      color: #fff;
+      background-color: purple;
+    }
   }
 
   .loader {
