fix: NGX-11 tag scroll issue fixed
fix: NGX-11 allow to call refresh tag explicitly from outside

--- a/projects/ngx-mentions/src/lib/ngx-mentions.component.html
+++ b/projects/ngx-mentions/src/lib/ngx-mentions.component.html
@@ -16,6 +16,7 @@
 <ngx-text-input-highlight [textInputElement]="textInputElement"
     [tags]="selectedCwis"
     [tagCssClass]="tagCssClass"
+    [fireRefresh]="fireRefresh"
     (tagClick)="tagClick.emit($event)"
     (tagMouseEnter)="tagMouseEnter.emit($event)"
     (tagMouseLeave)="tagMouseLeave.emit($event)"></ngx-text-input-highlight>
