fix: NGX-11 fireRefresh => refreshTagHighligting

--- a/projects/ngx-mentions/src/lib/ngx-mentions.component.html
+++ b/projects/ngx-mentions/src/lib/ngx-mentions.component.html
@@ -16,7 +16,7 @@
 <ngx-text-input-highlight [textInputElement]="textInputElement"
     [tags]="selectedCwis"
     [tagCssClass]="tagCssClass"
-    [fireRefresh]="fireRefresh"
+    [refreshTagHighlighting]="refreshTagHighlighting"
     (tagClick)="tagClick.emit($event)"
     (tagMouseEnter)="tagMouseEnter.emit($event)"
     (tagMouseLeave)="tagMouseLeave.emit($event)"></ngx-text-input-highlight>
