fix: NGX-11 tag scroll issue fixed

--- a/projects/ngx-mentions/src/lib/text-input-highlight/text-input-highlight.component.scss
+++ b/projects/ngx-mentions/src/lib/text-input-highlight/text-input-highlight.component.scss
@@ -9,7 +9,7 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   &::-webkit-scrollbar {
-    display: none;
+    visibility: hidden;
   }
   
   word-break: break-word;
