--- a/src/app/shared/styles/common.scss
+++ b/src/app/shared/styles/common.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 30px;
+    min-height: 30px;
 
     .additional-info {
       color: gray;
