feat: NGX-46 added support for multiple trigger chars

--- a/projects/ngx-mentions/src/lib/ngx-mentions.component.html
+++ b/projects/ngx-mentions/src/lib/ngx-mentions.component.html
@@ -1,10 +1,9 @@
 <ngx-text-input-autocomplete [textInputElement]="textInputElement"
     [menuTemplate]="menuTemplate"
-    [triggerCharacter]="triggerCharacter"
+    [mentionsConfig]="mentionsConfig"
     [searchRegexp]="searchRegexp"
     [closeMenuOnBlur]="closeMenuOnBlur"
     [removeWholeTagOnBackspace]="removeWholeTagOnBackspace"
-    [getChoiceLabel]="getChoiceLabel"
     [selectedChoices]="selectedChoices"
     (search)="search.emit($event)"
     (choiceSelected)="choiceSelected.emit($event)"
