--- a/src/app/overview-b/overview-b.component.html
+++ b/src/app/overview-b/overview-b.component.html
@@ -8,8 +8,7 @@
 
   <ngx-mentions [textInputElement]="textareaRef"
     [menuTemplate]="menuTemplate"
-    [triggerCharacter]="'@'"
-    [getChoiceLabel]="getChoiceLabel"
+    [mentionsConfig]="mentionsConfig"
     [searchRegexp]="searchRegexp"
     [removeWholeTagOnBackspace]="true"
     (search)="loadChoices($event)"
