fix: NGX-32 removed unused file and minor fix

--- a/src/app/overview-b/overview-b.component.html
+++ b/src/app/overview-b/overview-b.component.html
@@ -34,7 +34,7 @@
 
   <div class="formatted-text" [innerHTML]="formattedText"></div>
   
-  <a href="https://github.com/abhijit-chikane/ngx-mentions/tree/master/src/app/overview-b">Github Example link</a>
+  <a href="https://github.com/abhijit-chikane/ngx-mentions/tree/master/src/app/overview-b">Github Example Link</a>
 
   <h4> Custom text input autocomplete menu</h4>
 </div>
