--- a/src/app/overview-a/overview-a.component.html
+++ b/src/app/overview-a/overview-a.component.html
@@ -30,7 +30,7 @@
   
   <div class="formatted-text" [innerHTML]="formattedText"></div>
 
-  <a href="https://github.com/abhijit-chikane/ngx-mentions/tree/master/src/app/overview-a">Github Example link</a>
+  <a href="https://github.com/abhijit-chikane/ngx-mentions/tree/master/src/app/overview-a">Github Example Link</a>
   
   <h4>Built in autocomplete menu</h4>
 
