--- a/src/app/overview-b/overview-b.component.html
+++ b/src/app/overview-b/overview-b.component.html
@@ -10,6 +10,7 @@
     [menuTemplate]="menuTemplate"
     [selectedChoices]="selectedChoices"
     [mentionsConfig]="mentionsConfig"
+    [mentions]="mentions"
     [searchRegexp]="searchRegexp"
     [removeWholeTagOnBackspace]="true"
     (search)="loadChoices($event)"
