--- a/src/app/overview-c/overview-c.component.html
+++ b/src/app/overview-c/overview-c.component.html
@@ -28,11 +28,12 @@
     </ngx-text-input-autocomplete-menu>
   </ng-template>
 
-  
-  <div class="formatted-text" [innerHTML]="formattedText"></div>
+
+  <div class="formatted-text"
+    [innerHTML]="formattedText"></div>
 
   <a href="https://github.com/abhijit-chikane/ngx-mentions/tree/master/src/app/overview-c">Github Example Link</a>
-  
-  <h4>Built in autocomplete menu</h4>
+
+  <h4>Customize tag highlighting</h4>
 
 </div>
