--- a/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.scss
+++ b/projects/ngx-mentions/src/lib/text-input-autocomplete/text-input-autocomplete-menu/text-input-autocomplete-menu.scss
@@ -1,6 +1,6 @@
 .ngx-selectable-list {
     padding: 0;
-    margin: 8px 0;
+    margin: 6px 0;
     background-color: #f9f9f9;
     z-index: 1;
     border: 1px solid #ccc;
@@ -8,6 +8,11 @@
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
     max-height: 400px;
     overflow: auto;
+
+    &__loader {
+        height: 24px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
 
     .ngx-selectable-list-item {
         padding: 2px 16px;
